rnsc/tests/snapshots/error-parser-outside_class_directive-before_class_dir-dot_method.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----

.method public static main ([Ljava/lang/String;)V
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected directive before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_method.rns:2:1 ]
   │
 2 │ .method public static main ([Ljava/lang/String;)V
   │ ───┬───  
   │    ╰───── valid context for .method directive is: 'class body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
