rnsc/tests/snapshots/error-parser-outside_class_directive-before_class_dir-dot_newline.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.
.class_end
----- STDERR -----
[E-008] Error: unexpected identifier before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_newline.rns:1:1 ]
   │
 1 │ .
   │ ┬  
   │ ╰── valid context for . identifier is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
